--- a/www/templates/maintenance.html
+++ b/www/templates/maintenance.html
@@ -29,8 +29,8 @@
                             <span class="input-label">Estado</span>
                             <input type="text" required readonly ng-model="maintenance.statusDescription">
                         </label>
-                        <ion-toggle toggle-class="toggle-positive" ng-model="maintenance.preventive" ng-change="maintenance.preventive = true">Preventivo</ion-toggle>
-                        <ion-toggle toggle-class="toggle-positive" ng-model="maintenance.corrective" ng-change="maintenance.corrective = readOnlyMode ? !maintenance.corrective : maintenance.corrective; tabs.refreshTabs(); addArticle();">Correctivo</ion-toggle>
+                        <ion-toggle toggle-class="toggle-positive" ng-model="maintenance.preventive" ng-disabled="true">Preventivo</ion-toggle>
+                        <ion-toggle toggle-class="toggle-positive" ng-model="maintenance.corrective" ng-change="tabs.refreshTabs(); addArticle();" ng-disabled="readOnlyMode">Correctivo</ion-toggle>
                     </div>
                 </form>
                 <div class="spacer spacer-footer"></div>
@@ -84,9 +84,9 @@
                                 <option value=""> </option>
                             </select>
                         </label>
-                        <ion-toggle toggle-class="toggle-positive" ng-model="battery.standardBox" ng-change="battery.standardBox = readOnlyMode ? !battery.standardBox : battery.standardBox">Caja estandar</ion-toggle>
-                        <ion-toggle toggle-class="toggle-positive" ng-model="battery.cover" ng-change="battery.cover = readOnlyMode ? !battery.cover : battery.cover">Tapa</ion-toggle>
-                        <ion-toggle toggle-class="toggle-positive" ng-model="battery.drainHoles" ng-change="battery.drainHoles = readOnlyMode ? !battery.drainHoles : battery.drainHoles">Agujeros de drenaje</ion-toggle>
+                        <ion-toggle toggle-class="toggle-positive" ng-model="battery.standardBox"  ng-disabled="readOnlyMode">Caja estandar</ion-toggle>
+                        <ion-toggle toggle-class="toggle-positive" ng-model="battery.cover" ng-disabled="readOnlyMode">Tapa</ion-toggle>
+                        <ion-toggle toggle-class="toggle-positive" ng-model="battery.drainHoles" ng-disabled="readOnlyMode">Agujeros de drenaje</ion-toggle>
                         <label class="item item-input">
                             <span class="input-label">Peso mínimo (kg)</span>
                             <input type="number" min="0.00" max="9999.99" ng-readonly="readOnlyMode" ng-model="battery.minimunWeight" ng-model-options="{updateOn: 'blur'}">
@@ -229,22 +229,28 @@
                     <div class="list list-inset">
                         <div class="item item-icon-right no-padding" ng-repeat="cr in reviewOfCells">
                             <div class="row">
-                                <div class="col">
+                                <div class="col col-10">
                                     <label class="item item-input">
                                         <span class="input-label"># {{ cr.cellOrder }}</span>
                                     </label>
                                 </div>
-                                <div class="col col-40">
+                                <div class="col">
                                     <label class="item item-input">
                                         <span class="input-label">Volt.</span>
-                                        <input type="number" min="0.00" max="9999.99" ng-model="cr.voltage" ng-model-options="{updateOn: 'blur'}" required ng-readonly="readOnlyMode">
+                                        <input type="number" min="0.00" max="9999.99" ng-model="cr.voltage" ng-model-options="{updateOn: 'blur'}" ng-required="cr.withVoltage" ng-readonly="readOnlyMode || !cr.withVoltage">
                                     </label>
                                 </div>
-                                <div class="col col-40">
+                                <div class="col col-10">
+                                    <ion-checkbox ng-model="cr.withVoltage" ng-disabled="readOnlyMode" style="padding-left:inherit;"> &nbsp;</ion-checkbox>
+                                </div>
+                                <div class="col">
                                     <label class="item item-input">
                                         <span class="input-label">Dens.</span>
-                                        <input type="number" min="0.00" max="9999.99" ng-model="cr.density" ng-model-options="{updateOn: 'blur'}" required ng-readonly="readOnlyMode">
+                                        <input type="number" min="0.00" max="9999.99" ng-model="cr.density" ng-model-options="{updateOn: 'blur'}" ng-required="cr.withDensity" ng-readonly="readOnlyMode || !cr.withDensity">
                                     </label>
+                                </div>
+                                <div class="col col-10">
+                                    <ion-checkbox ng-model="cr.withDensity" ng-disabled="readOnlyMode" style="padding-left:inherit;"> &nbsp;</ion-checkbox>
                                 </div>
                             </div>
                             <i class="icon ion-ios-chatbubble" ng-show="(cr.comments)" ng-click="setCellComment(cr)"></i>
